# cpl-window-manager

./: rustfmt.toml
assignment/: Cargo.toml
assignment/src/: a_fullscreen_wm.rs  b_tiling_wm.rs  c_floating_windows.rs  d_minimising_windows.rs  e_fullscreen_windows.rs  error.rs  f_gaps.rs  fixed_window_manager.rs  g_multiple_workspaces.rs  h_different_tiling_layout.rs  layouter.rs  lib.rs
