[package]
# Don't change this!
name = "cplwm-assignment"
# You can change this field
version = "0.1.0"
# Fill in this field
authors = ["Jens Claes <jens.claes@student.kuleuven.be>"]

[dependencies]
rustc-serialize = "0.3.*"
# You are free to add additional dependencies to your project. But this is
# certainly not required.

[dev-dependencies]
stainless = "0.1.9"
expectest = "0.6.0"

[dependencies.cplwm-api]
path = "../api"
version = "*"
